Fix header spacing on chrome

--- a/www/css/keskus.css
+++ b/www/css/keskus.css
@@ -67,8 +67,7 @@ a:hover {
 }
 
 #osoite span {
-    margin: 0px 14px;
-    padding-top: 2px;
+    margin: 0 8px;
 }
 
 .phone {
